--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ build-ArachnID-Desktop_Qt_5_12_3_GCC_64bit-Debug/*
 build-ArachnID-Desktop_Qt_5_12_3_GCC_64bit-Debug
 samples/.vscode/*
 .vscode/*
+ArachnID/ArachnID.pro.user
